--- a/index.tex
+++ b/index.tex
@@ -799,10 +799,158 @@ kriteria). Rekap skor siap diunduh sebagai CSV:
 \href{Self-Assessment_UTS-1_s_d__UTS-5__dibuat_otomatis_.csv}{Download
 CSV ringkasan}.
 
-\bookmarksetup{startatroot}
-
-\chapter{Hasil Self-Assessment UTS (URL:
+\section{Hasil Self-Assessment UTS (URL:
 https://awp-confirm.github.io/all-about-me/)}\label{hasil-self-assessment-uts-url-httpsawp-confirm.github.ioall-about-me}
+
+\subsection*{Identifikasi}\label{identifikasi}
+\addcontentsline{toc}{subsection}{Identifikasi}
+
+\textbf{Nama Mahasiswa:} Muhammad Azikra Wira Pratama\\
+\textbf{NIM:} 18224089\\
+\textbf{Jenis Penilaian:} Self-assessment
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\subsection*{Tinjauan Umum}\label{tinjauan-umum}
+\addcontentsline{toc}{subsection}{Tinjauan Umum}
+
+Seluruh bagian portofolio UTS telah tersusun lengkap dari UTS-1 hingga
+UTS-5.\\
+Setiap bagian menunjukkan perkembangan kemampuan komunikasi personal,
+refleksi diri, dan penerapan konsep interpersonal.
+
+Struktur portofolio mencakup: - \textbf{UTS-1 (All About Me):}
+Menampilkan narasi reflektif dari identitas diri hingga penutup.\\
+- \textbf{UTS-2 (My Songs for You):} Lagu pilihan \emph{``7 Years''}
+disertai alasan, pesan personal, dan refleksi makna.\\
+- \textbf{UTS-3 (My Stories for You):} Cerita pendek ``A Way to the
+Beach'' dengan pendahuluan, inti, dan penutup reflektif.\\
+- \textbf{UTS-4 (My SHAPE):} Menyajikan hasil tes VIA, misi pribadi,
+serta refleksi S-H-A-P-E secara rinci.\\
+- \textbf{UTS-5 (My Personal Reviews):} Analisis pesan dan evaluasi diri
+menggunakan pendekatan komunikasi interpersonal.
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\section*{Tinjauan Spesifik Per
+Bagian}\label{tinjauan-spesifik-per-bagian}
+\addcontentsline{toc}{section}{Tinjauan Spesifik Per Bagian}
+
+\markright{Tinjauan Spesifik Per Bagian}
+
+\subsection*{UTS-1 --- All About Me (95
+\%)}\label{uts-1-all-about-me-95}
+\addcontentsline{toc}{subsection}{UTS-1 --- All About Me (95 \%)}
+
+\textbf{Kriteria Nilai:}\\
+Orisinalitas = 5 Keterlibatan = 5 Humor = 4 Wawasan = 5
+
+\textbf{Catatan \& Refleksi:}\\
+Tulisan orisinal dan reflektif, dengan gaya personal kuat.\\
+Perlu ditambah contoh konkret pada bagian \emph{Sisi Ringan} agar narasi
+lebih hidup.
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\subsection*{UTS-2 --- My Songs for You (90
+\%)}\label{uts-2-my-songs-for-you-90}
+\addcontentsline{toc}{subsection}{UTS-2 --- My Songs for You (90 \%)}
+
+\textbf{Kriteria Nilai:}\\
+Orisinalitas = 4 Keterlibatan = 5 Humor = 4 Inspirasi = 5
+
+\textbf{Catatan \& Refleksi:}\\
+Pilihan lagu \emph{``7 Years''} relevan dengan tema refleksi diri.\\
+Akan lebih bermakna bila ditambah momen pribadi saat lagu ini terasa
+signifikan.
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\subsection*{UTS-3 --- My Stories for You (95
+\%)}\label{uts-3-my-stories-for-you-95}
+\addcontentsline{toc}{subsection}{UTS-3 --- My Stories for You (95 \%)}
+
+\textbf{Kriteria Nilai:}\\
+Orisinalitas = 5 Keterlibatan = 5 Pengembangan Narasi = 4 Inspirasi = 5
+
+\textbf{Catatan \& Refleksi:}\\
+Kisah menggambarkan perjalanan dan pertumbuhan diri dengan baik.\\
+Disarankan menambahkan satu konflik kecil agar ketegangan emosional
+meningkat.
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\subsection*{UTS-4 --- My SHAPE (85 \%)}\label{uts-4-my-shape-85}
+\addcontentsline{toc}{subsection}{UTS-4 --- My SHAPE (85 \%)}
+
+\textbf{Kriteria Nilai:}\\
+Orisinalitas = 4 Keterlibatan = 4 Pengembangan Narasi = 4 Inspirasi = 5
+
+\textbf{Catatan \& Refleksi:}\\
+Setiap komponen S-H-A-P-E telah dijelaskan dengan sistematis.\\
+Akan lebih kuat jika ditambah pengalaman nyata yang mencerminkan
+kekuatan diri.
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\subsection*{UTS-5 --- My Personal Reviews (80
+\%)}\label{uts-5-my-personal-reviews-80}
+\addcontentsline{toc}{subsection}{UTS-5 --- My Personal Reviews (80 \%)}
+
+\textbf{Kriteria Nilai:}\\
+Pemahaman Konsep Interpersonal = 4 Analisis Kritis Pesan = 4 Argumentasi
+(Logos) = 4 Etos \& Empati = 4 Rekomendasi Perbaikan = 4
+
+\textbf{Catatan \& Refleksi:}\\
+Analisis menunjukkan pemahaman konsep interpersonal yang baik.\\
+Gunakan pola tetap: \emph{tujuan -- audiens -- hal efektif -- aspek
+perbaikan -- langkah konkret.}
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\section*{Skor dan Ringkasan
+Penilaian}\label{skor-dan-ringkasan-penilaian}
+\addcontentsline{toc}{section}{Skor dan Ringkasan Penilaian}
+
+\markright{Skor dan Ringkasan Penilaian}
+
+\begin{longtable}[]{@{}llllll@{}}
+\toprule\noalign{}
+UTS & Skor & CPMK-1 & CPMK-2 & CPMK-3 & CPMK-4 \\
+\midrule\noalign{}
+\endhead
+\bottomrule\noalign{}
+\endlastfoot
+UTS-1 & 95 & 3.80 & 5.70 & 0.00 & 0.00 \\
+UTS-2 & 90 & 4.50 & 6.30 & 0.00 & 0.00 \\
+UTS-3 & 95 & 5.70 & 6.65 & 0.00 & 0.00 \\
+UTS-4 & 85 & 5.95 & 5.10 & 0.00 & 0.00 \\
+UTS-5 & 80 & 6.40 & 8.00 & 0.00 & 0.00 \\
+\end{longtable}
+
+\textbf{Total Kontribusi CPMK:}\\
+CPMK-1 = 26.35  CPMK-2 = 31.75  CPMK-3 = 0.00  CPMK-4 = 0.00
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\section*{Refleksi Akhir}\label{refleksi-akhir-1}
+\addcontentsline{toc}{section}{Refleksi Akhir}
+
+\markright{Refleksi Akhir}
+
+Melalui seluruh proses UTS ini, saya belajar bahwa refleksi diri bukan
+hanya sekadar menulis tentang pengalaman, tetapi juga memahami
+nilai-nilai yang membentuk cara berpikir dan berinteraksi.\\
+Setiap bagian portofolio menunjukkan sisi berbeda dari diri saya ---
+mulai dari mengenal jati diri, memaknai lagu, hingga menilai kekuatan
+pribadi dan cara berkomunikasi.
+
+Proses ini menegaskan bahwa komunikasi efektif tidak hanya tentang
+berbicara, tetapi juga tentang memahami, berempati, dan belajar dari
+setiap interaksi.\\
+Saya berkomitmen untuk terus mengembangkan kemampuan ini di masa depan
+agar dapat menjadi pribadi yang lebih reflektif, terbuka, dan bermanfaat
+bagi lingkungan sekitar.
 
 \bookmarksetup{startatroot}
 
