--- a/My_Shapes/index.qmd
+++ b/My_Shapes/index.qmd
@@ -1,4 +1,4 @@
-# UTS-4 My SHAPE (Spiritual Gifts, Heart, Abilities, Personality, Experiences)
+# UTS-4 My SHAPE (Strengths, Heart, Abilities, Personality, Experiences)
 
 ## Identitas Diri  
 
