--- a/index.tex
+++ b/index.tex
@@ -611,8 +611,8 @@ hanya sekadar berjalan kaki menuju pantai di malam hari.
 
 \bookmarksetup{startatroot}
 
-\chapter{UTS-4 My SHAPE (Spiritual Gifts, Heart, Abilities, Personality,
-Experiences)}\label{uts-4-my-shape-spiritual-gifts-heart-abilities-personality-experiences}
+\chapter{UTS-4 My SHAPE (Strengths, Heart, Abilities, Personality,
+Experiences)}\label{uts-4-my-shape-strengths-heart-abilities-personality-experiences}
 
 \section{Identitas Diri}\label{identitas-diri-1}
 
