--- a/index.tex
+++ b/index.tex
@@ -799,6 +799,13 @@ kriteria). Rekap skor siap diunduh sebagai CSV:
 \href{Self-Assessment_UTS-1_s_d__UTS-5__dibuat_otomatis_.csv}{Download
 CSV ringkasan}.
 
+\section{Hasil Peer Assessment}\label{hasil-peer-assessment}
+
+Link 1 : \href{UTS-5_Skor.xlsx}{Link1}
+
+Link 2 (Cadangan):
+\href{https://docs.google.com/spreadsheets/d/1fZ07IFHIUJn8kwhApUMrOGOz6-yZqwej/edit?gid=18198366\#gid=18198366}{Link2}
+
 \section{Hasil Self-Assessment UTS (URL:
 https://awp-confirm.github.io/all-about-me/)}\label{hasil-self-assessment-uts-url-httpsawp-confirm.github.ioall-about-me}
 
